--- a/functions/tidy-eval.Rmd
+++ b/functions/tidy-eval.Rmd
@@ -11,7 +11,7 @@ output: html_document
 
 # Background and motivation
 
-Tidy evaluation is the tidyverse implementation of "non-standard evaluation" in R. Non-standard valuation is what lets you write:
+Tidy evaluation is the tidyverse implementation of "non-standard evaluation" in R. Non-standard evaluation is what lets you write:
 
 ```{r, eval=FALSE}
 library(ggplot2)
@@ -23,7 +23,7 @@ Rather than having to write:
 library("ggplot2")
 ```
 
-R guesses at your intention about whether it should treat `ggplot2` as an object or as text here.
+R guesses at your intention about whether it should treat `ggplot2` as an object or as text.
 
 In dplyr, non-standard evaluation, or more specifically, tidy evaluation, is used extensively to reduce typing and create elegant code:
 
@@ -33,9 +33,9 @@ d %>% group_by(column1) %>% summarise(a = sum(b))
 
 Note that `column1` and `b` refer to column names and dplyr figures that out rather than looking for objects `column1` and `b`.
 
-While this can make for elegant code, can also introduce conundrums if you want to write some types of functions that make use of functions from the tidyverse that use tidyevaluation.
+While this can make for elegant code, can also introduce conundrums if you want to write some types of functions that make use of functions from the tidyverse that use tidy evaluation.
 
-For example, imagine we try writing the following function to group by some call them and calculate the mean within each group:
+For example, imagine we try writing the following function to group by some column and calculate the mean within each group:
 
 ```{r, error=TRUE}
 library(dplyr)
@@ -90,7 +90,7 @@ d %>% mean_wip(country)
 
 But this means that you can't use `...` for other purposes in your function and it means that your function will silently eat up incorrect arguments.
 
-There's one other situation you may find yourself in that requires one more tidy evaluation syntax. Imagine you wanted to pass three or function the name of the new column. To do that we need to also use `:=`: 
+There's one other situation you may find yourself in that requires one more tidy evaluation syntax. Imagine you wanted to pass the name of the new column as an argument. To do that we need to also use `:=`: 
 
 ```{r}
 mean_wip <- function(df, by, name) {
@@ -103,7 +103,7 @@ d %>% mean_wip(by = year, name = mean_by_year)
 d %>% mean_wip(by = country, name = mean_by_country)
 ```
 
-For nearly all cases that's all you need to know now about tidy evaluation. Note that you don't need to use these tricks for the vast majority of time that you might use dplyr inside a function, but sometimes I'll run into these situations.
+For the vast majority of cases that's all you need to know now about tidy evaluation. Note that you don't need to use these tricks most of time that you might use dplyr inside a function, but sometimes you'll run into these situations.
 
 ggplot2 now also uses tidy evaluation. For example, imagine we wanted to plot the output of our data manipulation and change what is on the x axis:
 
@@ -144,11 +144,11 @@ d %>% mean_wip(by = country, arrange_by = wip) + coord_flip()
 
 # Exercise
 
-Create a function that takes the built-in `mtcars` data set and let you group by an arbitrary column and calculate the median value by some other arbitrary column. Use `group_by()` and `summarize()`.
+Create a function that takes the built-in `mtcars` data set and lets you group by an arbitrary column and calculate the median value by some other arbitrary column. Use `group_by()` and `summarize()`.
 
-Test your function on a variety of columns. For example, what is the median miles per gallon (`mpg`) for the various number of cylinders (`cyl`)?
+Test your function on a variety of columns. For example, what is the median miles per gallon (`mpg`) for each number of cylinders (`cyl`)?
 
-Extension: if that was easy, try allowing your function to change the name of the summarized column based on an argument your function.
+Extension: if that was easy, try allowing your function to change the name of the summarized column based on an argument to your function.
 
 ```{r}
 glimpse(mtcars)
